alignment issues in lawyer dashboard, header and profile placeholder in lawyer and defender image file

--- a/src/app/routes/+lawyer/lawyerdashboard/lawyerdashboard.component.scss
+++ b/src/app/routes/+lawyer/lawyerdashboard/lawyerdashboard.component.scss
@@ -80,3 +80,8 @@
   position: absolute;
   z-index: 1;
 }
+
+.fonts{
+  font: 500 20px/32px Roboto, "Helvetica Neue", sans-serif !important;
+ 
+}
